--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
       args:
         GITHUB_USERNAME: ${GITHUB_USERNAME}
         BQ_IMPACTS_GITHUB_TOKEN: ${BQ_IMPACTS_GITHUB_TOKEN}
-    container_name: test-fastapi
+    container_name: impacts-fastapi
     volumes:
       - .:/app
       - /app/__pycache__/
-    env_file: 
-      - .env  # This ensures Docker loads the variables from .env
+    #env_file: 
+    #  - .env  # This ensures Docker loads the variables from .env
     ports:
       - "8080:8080"
     environment:
