modify the GITHUB_ name to be valid

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       args:
-        GITHUB_USERNAME: ${GITHUB_USERNAME}
+        MY_GITHUB_USERNAME: ${MY_GITHUB_USERNAME}
         BQ_IMPACTS_GITHUB_TOKEN: ${BQ_IMPACTS_GITHUB_TOKEN}
     container_name: impacts-fastapi
     volumes:
@@ -21,5 +21,5 @@ services:
       - ATLAS_API_PATH=${ATLAS_API_PATH}
       - ATLAS_API_TOKEN=${ATLAS_API_TOKEN}
       - BQ_IMPACTS_GITHUB_TOKEN=${BQ_IMPACTS_GITHUB_TOKEN}
-      - GITHUB_USERNAME=${GITHUB_USERNAME}
+      - MY_GITHUB_USERNAME=${MY_GITHUB_USERNAME}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload
