--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -19,6 +19,6 @@ jobs:
       - run: echo ATLAS_API_PATH=${{ secrets.ATLAS_API_PATH }} >> .env.staging
       - run: echo ATLAS_API_TOKEN=${{ secrets.ATLAS_API_TOKEN }} >> .env.staging
       - run: echo BQ_IMPACTS_GITHUB_TOKEN=${{ secrets.BQ_IMPACTS_GITHUB_TOKEN }} >> .env.staging
-      - run: echo GITHUB_USERNAME=${{ secrets.GITHUB_USERNAME }} >> .env.staging
+      - run: echo MY_GITHUB_USERNAME=${{ secrets.MY_GITHUB_USERNAME }} >> .env.staging
       - run: make build-staging
       - run: make start-staging
