--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi[standard]
 pydantic
 uvicorn
-git+https://${GITHUB_USERNAME}:${BQ_IMPACTS_GITHUB_TOKEN}@github.com/BiodiversiteQuebec/bq_impact_indicators.git@fix/docker-compatibility
+git+https://${MY_GITHUB_USERNAME}:${BQ_IMPACTS_GITHUB_TOKEN}@github.com/BiodiversiteQuebec/bq_impact_indicators.git@fix/docker-compatibility
